<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_checkin"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_check_in" />
        <item
            android:id="@+id/nav_report"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>
</menu>
